--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,13 @@
     <string name="no_app_found">No valid app found</string>
     <string name="delete">Delete</string>
     <string name="no_post_notifications_permissions">Permission to post notifications is required</string>
+    <string name="timers_notification_msg">Timers are running</string>
+    <string name="timer_single_notification_label_msg">Timer for %s is running</string>
+    <plurals name="timer_notification_msg">
+        <item quantity="one">%d timer is running</item>
+        <item quantity="other">%d timers are running</item>
+    </plurals>
+    <string name="timer">Timer</string>
+    <string name="time_expired">Time expired</string>
+    <string name="dismiss">Dismiss</string>
 </resources>
