--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -70,4 +70,5 @@
     <string name="minutes_raw">分钟</string>
     <string name="hours_raw">小时</string>
     <string name="days_raw">天</string>
+    <string name="restart">重新开始</string>
 </resources>
