--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -70,4 +70,5 @@
     <string name="minutes_raw">分鐘</string>
     <string name="hours_raw">小時</string>
     <string name="days_raw">天</string>
+    <string name="restart">重新開始</string>
 </resources>
